Regression: Sculpt: Fast Navigate does not work #102991

Closed
opened 2022-12-07 11:59:05 +01:00 by Sun Kim · 13 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 22.11.1.221110

Blender Version
Broken: version: 3.5, 3.4
Worked: version: 3.3
Caused by 65900d88a8

Short description of error
Sculpt mode Fast Navigate option does not work.

Exact steps for others to reproduce the error

  • From startup file, go in to Sculpt mode with the cube.
  • Add multires modifier and do a few subdiv
  • Make sure Fast Navigate is enabled in Options at the header, navigate around the cube
    BrokenFastNavigate.mp4
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 22.11.1.221110 **Blender Version** Broken: version: 3.5, 3.4 Worked: version: 3.3 Caused by 65900d88a8 **Short description of error** Sculpt mode Fast Navigate option does not work. **Exact steps for others to reproduce the error** - From startup file, go in to Sculpt mode with the cube. - Add multires modifier and do a few subdiv - Make sure Fast Navigate is enabled in Options at the header, navigate around the cube [BrokenFastNavigate.mp4](https://archive.blender.org/developer/F14007903/BrokenFastNavigate.mp4)
Author
Contributor

Added subscriber: @persun

Added subscriber: @persun

#103701 was marked as duplicate of this issue

#103701 was marked as duplicate of this issue

#103137 was marked as duplicate of this issue

#103137 was marked as duplicate of this issue

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pratik Borhade changed title from Sculpt: Fast Navigate does not work to Regression: Sculpt: Fast Navigate does not work 2022-12-08 04:33:51 +01:00
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Member

Caused by 65900d88a8
@JosephEagar ^

Caused by 65900d88a8 @JosephEagar ^
Member

Added subscriber: @hoanguk

Added subscriber: @hoanguk

This issue was referenced by 6f9cfb037a

This issue was referenced by 6f9cfb037a8e5dbd8707877d0a9539ae8d358656
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-12-13 22:52:55 +01:00
Member

@JosephEagar hi, can we backport your fix to 3.4 branch?

@JosephEagar hi, can we backport your fix to 3.4 branch?
Member

Added subscribers: @ebarranco, @Baardaap

Added subscribers: @ebarranco, @Baardaap
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102991
No description provided.